fix sharethis display issue on mobile device

--- a/themes/casper/assets/css/screen.css
+++ b/themes/casper/assets/css/screen.css
@@ -1450,11 +1450,11 @@ body:not(.post-template) .post-title {
 
 /* Correctly position site-footer when next to the .read-next container */
 .read-next + .site-footer {
-    position: absolute;
+    /*position: absolute;*/
     bottom: 0;
     left: 0;
     right: 0;
-    margin: 0;
+    margin: 0 0 50px 0;
 }
 
 /* ==========================================================================
